--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
         <a href="/">The Tech Blog</a>
       </h1>
       <nav>
-        <a href="/">home</a>
+        <a href="/">Home</a>
         {{!-- if logged in the dashboard.handlebars will appear --}}
         {{#if loggedIn}}
         <a href="/dashboard">dashboard</a>
