updated login js

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -17,7 +17,7 @@
 </section>
 {{/if}}
 <div>
-    <button> New Post</button>
+    <button id="new-post-btn"> New Post</button>
 </div>
 
-<script src="/public/javascript/dashboard.js"></script>
+<script src="/javascript/dashboard.js"></script>
